Cases UI: Mobile more info bug fixed, webkit prefix was missing. Inspiration inview stretching added to 4 projects pending.

--- a/app/scss/views/_cases.scss
+++ b/app/scss/views/_cases.scss
@@ -60,7 +60,12 @@
 
 		@include desktop {
 			// font-size: 0.9em;
-			font-size: 1.04em;
+			// font-size: 1.04em;
+			font-size: 16px;
+		}
+
+		@media (min-width: 1750px) {
+			font-size: 18px;
 		}
 	}
 
@@ -263,6 +268,10 @@
 				margin-bottom: 19px;
 
 				@include desktop {
+					margin-bottom: 35px;
+				}
+
+				@media (min-width: 1750px) {
 					margin-bottom: 80px;
 				}
 			}
@@ -877,6 +886,7 @@
 	cursor: pointer;
 	// z-index: 20;
 	// position: fixed;
+	position: -webkit-sticky;
 	position: sticky;
 	bottom: 70px;
 	// right: 15px;
@@ -955,7 +965,7 @@
 	padding: 0 15px;
 	background-color: $black-gray;
 	@include translate(100%, 0);
-	@include transitions-ease(1.1s);
+	@include trans-delayed(1.1s, .7s);
 
 	font-family: 'Founders-L';
 	color: #fff;
@@ -1074,6 +1084,7 @@
 
 	&.opened{
 		@include translate(0,0);
+		@include transitions-ease(1.1s);
 		
 		.js-cascade{
 			opacity: 1;
